--- a/src/app/features/gis/components/policy/components/underwriting/underwriting.component.html
+++ b/src/app/features/gis/components/policy/components/underwriting/underwriting.component.html
@@ -32,7 +32,7 @@
 
                 <div class="mt-3" *ngIf="selectedOption === 'new-business'">
                     <!-- New Business Content -->
-                    <p class="questions-text"> {{'gis.policy.is_the_policy_short_period' | translate}}</p>
+                    <p class="questions-text"> {{'gis.policy.is_the_policy_short_period' | translate}}?</p>
                     <div class="d-flex ">
                         <div class="form-check  me-3">
                             <input class="form-check-input" type="radio" name="flexRadioDefault5" id="flexRadioDefault5">
@@ -43,7 +43,7 @@
                             <label class="form-check-label" for="flexRadioDefault6">{{'gis.policy.no' | translate}} </label>
                         </div>
                     </div>
-                    <p class="mt-4 questions-text">{{'gis.policy.is_the_policy_renewable' | translate}}</p>
+                    <p class="mt-4 questions-text">{{'gis.policy.is_the_policy_renewable' | translate}}?</p>
                     <div class="d-flex ">
                         <div class="form-check  me-3">
                             <input class="form-check-input" type="radio" name="flexRadioDefault7" id="flexRadioDefault7">
@@ -55,7 +55,7 @@
                         </div>
 
                     </div>
-                    <p class="mt-4 questions-text">{{'gis.policy.is_it_a_new_client' | translate}}</p>
+                    <p class="mt-4 questions-text">{{'gis.policy.is_it_a_new_client' | translate}}?</p>
                     <div class="d-flex ">
                         <div class="form-check  me-3">
                             <input class="form-check-input" type="radio" name="flexRadioDefault9" id="flexRadioDefault9">
