--- a/src/app/features/lms/ind/components/proposal/components/payment-option/payment-option.component.html
+++ b/src/app/features/lms/ind/components/proposal/components/payment-option/payment-option.component.html
@@ -243,6 +243,7 @@
             <div class="d-flex justify-content-center text-black">Mpesa</div>
           </div>
         </div>
+        <!-- {{quote | json}} -->
         <div class="row justify-content-center text-danger fw-bold " *ngIf="!quote?.proposal_no">
           <div class=" card-body centered-content">
             Proposal No. is not defined!
